Fix word wrap in main menu

--- a/scss/wwu2019/general.scss
+++ b/scss/wwu2019/general.scss
@@ -72,6 +72,8 @@
 body {
     background-color: #fff;
     font-family: 'MetaWebPro', sans-serif;
+    overflow-wrap: break-word;
+    overflow-wrap: anywhere;
 }
 
 h1 {
